--- a/estilo.css
+++ b/estilo.css
@@ -3,7 +3,10 @@ body{
     background-size: 100vw;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+.segunda-bg{
+    background-image: url('https://images.pexels.com/photos/313782/pexels-photo-313782.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    background-size: 100vw;
+}
 .cabecalho{
     text-align: center;
     color: white;
@@ -18,6 +21,15 @@ body{
 .foto{
     width: 25%;
 
+}
+
+.texto{
+    color: white;
+    font-weight: bold;
+}
+
+.abom{
+    color: white;
 }
 
 .caixa{
